fixing up install and run scripts